drkns 18.10.2020 23:32:51 +0100 - build 5679

1. gh-269: Apply variables to subsequent lines as well.

drkns 12.10.2020 08:40:27 +0100 - build 5678

1. Уточнение 5677.

drkns 12.10.2020 00:12:45 +0100 - build 5677

1. Рефакторинг.

2. Как выяснилось, gnu ld maps бесполезны для stack tracing, поэтому теперь вместо них используется вывод objdump.

yjh 11.10.2020 09:35:31 +0300 - build 5676

1. Добавляем .lz,.tlz к маске <arc>

drkns 30.09.2020 17:31:32 +0100 - build 5675

1. gh-269: Feature Request: Reuse User Input tokens in F2 User Menu

drkns 28.09.2020 20:03:38 +0100 - build 5674

1. Уточнение 5672.

bitraid 28.09.2020 13:00:01 +0100 - build 5673

1. gh-268: Enable saving state of unmounted volumes display

drkns 27.09.2020 23:37:58 +0100 - build 5672

1. Меню дисков умеет показывать непримонтированные тома (Ctrl-H).

2. Мелкие уточнения обработки разнообразных нестандартных путей.

3. Рефакторинг.

drkns 22.09.2020 08:45:08 +0100 - build 5671

1. Криво работало копирование из вьювера.

drkns 19.09.2020 18:43:36 +0100 - build 5670

1. Рефакторинг.

drkns 17.09.2020 00:15:38 +0100 - build 5669

1. Продолжение 5667.

drkns 14.09.2020 17:39:39 +0100 - build 5668

1. 0003819: Editor: crash when typing in alternate layout.

drkns 14.09.2020 00:58:21 +0100 - build 5667

1. Криво работало переключение экзотических кодовых страниц из-за неправильно устанавливаемых флагов.

2. Добавлена ручная roundtrip-проверка для тех страниц, которые не умеет валидировать ОС.

3. Рефакторинг.

4. Тесты.

zg 14.09.2020 01:03:19 +0300 - build 5666

1. подавление перерисовки под диалогом с исключениями.

drkns 12.09.2020 02:02:02 +0100 - build 5665

1. В некоторых случаях неправильно работал regex-поиск слов.

drkns 10.09.2020 00:11:09 +0100 - build 5664

1. Уточнения обработки исключений.

2. Отображение системных ошибок в исключениях SQLite.

3. Прочие мелочи.

drkns 06.09.2020 23:00:00 +0100 - build 5663

1. Бинарные данные в экспортируемой конфигурации теперь хранятся как base64.
