@@ -1,3 +1,7 @@
+drkns 18.10.2020 23:54:25 +0100 - build 5680
+
+1. Correction of 5679.
+
 drkns 18.10.2020 23:32:51 +0100 - build 5679
 
 1. gh-269: Apply variables to subsequent lines as well.
